theory/old_files/spatial_integrals_2D/old_outfiles/slurm-22328962.out
  File "/project2/jnovembre/steinerm/rvsfs/spatial_integrals/spatial_integrals_2D.py", line 74
    integ = multiprocessing.Process(target=gaussquad_integral,name="Integral",args=(s,4,integrand6,)
                                   ^
SyntaxError: '(' was never closed
  File "/project2/jnovembre/steinerm/rvsfs/spatial_integrals/spatial_integrals_2D.py", line 74
    integ = multiprocessing.Process(target=gaussquad_integral,name="Integral",args=(s,4,integrand6,)
                                   ^
SyntaxError: '(' was never closed
  File "/project2/jnovembre/steinerm/rvsfs/spatial_integrals/spatial_integrals_2D.py", line 74
    integ = multiprocessing.Process(target=gaussquad_integral,name="Integral",args=(s,4,integrand6,)
                                   ^
SyntaxError: '(' was never closed
  File "/project2/jnovembre/steinerm/rvsfs/spatial_integrals/spatial_integrals_2D.py", line 74
    integ = multiprocessing.Process(target=gaussquad_integral,name="Integral",args=(s,4,integrand6,)
                                   ^
SyntaxError: '(' was never closed
  File "/project2/jnovembre/steinerm/rvsfs/spatial_integrals/spatial_integrals_2D.py", line 74
    integ = multiprocessing.Process(target=gaussquad_integral,name="Integral",args=(s,4,integrand6,)
                                   ^
SyntaxError: '(' was never closed
  File "/project2/jnovembre/steinerm/rvsfs/spatial_integrals/spatial_integrals_2D.py", line 74
    integ = multiprocessing.Process(target=gaussquad_integral,name="Integral",args=(s,4,integrand6,)
  File "/project2/jnovembre/steinerm/rvsfs/spatial_integrals/spatial_integrals_2D.py", line 74
    integ = multiprocessing.Process(target=gaussquad_integral,name="Integral",args=(s,4,integrand6,)
                                   ^
SyntaxError: '(' was never closed
                                   ^
SyntaxError: '(' was never closed
  File "/project2/jnovembre/steinerm/rvsfs/spatial_integrals/spatial_integrals_2D.py", line 74
    integ = multiprocessing.Process(target=gaussquad_integral,name="Integral",args=(s,4,integrand6,)
                                   ^
SyntaxError: '(' was never closed
  File "/project2/jnovembre/steinerm/rvsfs/spatial_integrals/spatial_integrals_2D.py", line 74
    integ = multiprocessing.Process(target=gaussquad_integral,name="Integral",args=(s,4,integrand6,)
                                   ^
SyntaxError: '(' was never closed
  File "/project2/jnovembre/steinerm/rvsfs/spatial_integrals/spatial_integrals_2D.py", line 74
    integ = multiprocessing.Process(target=gaussquad_integral,name="Integral",args=(s,4,integrand6,)
                                   ^
SyntaxError: '(' was never closed
